--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "theburger",
   "version": "1.0.0",
-  "description": "Eat-Da-Burger! is a restaurant app that lets users input the names of burgers they'd like to eat.   Whenever a user submits a burger's name, your app will display the burger on the left side of the page -- waiting to be devoured.   Each burger in the waiting area also has a Devour it! button. When the user clicks it, the burger will move to the right side of the page.   Your app will store every burger in a database, whether devoured or not.",
-  "main": "index.js",
+  "description": "The Ultimate Burger Lister! is an app that lets users input the names of burgers they'd like to eat. Whenever a user submits a burger's name, this app will display the burger on the left side of the page -- waiting to be devoured.   Each burger in the waiting area also has a 'Eat it now!' button. When the user clicks it, the burger will move to the right side of the page.   Your app will store every burger in a database, whether devoured or not.",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/emilybaum/theburger.git"
   },
-  "author": "",
+  "author": "Emily",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/emilybaum/theburger/issues"
